# ospat

./: .gitignore  Makefile  README.md  build.sh
elf2uart/: CMakeLists.txt
elf2uart/src/: CMakeLists.txt  elf2uart.cc
examples/: .gitignore
kernel/: .gitignore  Makefile
kernel/core/: Makefile  boot.c  cons.c  debug.c  div64.S  error.c  loader.c  lockobj.c  partition.c  sched.c  syscall.c  thread.c  time.c
kernel/include/: arch.h  bsp.h  dependencies.h  elf.h  errno.h  libc.h  soclib.h  types.h
kernel/libc/: Makefile  __udivdi3.c  exit.c  memcpy.c  memset.c  printf.c  soclib.c  strcmp.c  strlen.c
kernel/middleware/: Makefile  portcreate.c  portflushall.c  portinit.c  portqueueingcreate.c  portqueueingid.c  portqueueingreceive.c  portqueueingsend.c  portqueueingstatus.c  portsamplingcreate.c  portsamplingid.c  portsamplingread.c  portsamplingstatus.c  portsamplingwrite.c  portutils.c  queueinit.c  resources.c
libpok/: .gitignore  Makefile  arch.h
libpok/arch/: .gitignore
libpok/arinc653/: Makefile  blackboard.c  buffer.c  error.c  event.c  logbook.c  partition.c  process.c  queueing.c  sampling.c  semaphore.c  time.c
libpok/core/: Makefile  errno.c  errorraise.c  eventbroadcast.c  eventcreate.c  eventlock.c  eventsignal.c  eventunlock.c  eventwait.c  threadcreate.c  threaddelayedstart.c  threadid.c  threadperiod.c  threadresume.c  threadsleep.c  threadstart.c  threadsuspend.c  timeget.c
libpok/include/: arch.h  assert.h  errno.h  types.h
libpok/libc/: Makefile
libpok/middleware/: Makefile  blackboardclear.c  blackboardcreate.c  blackboarddisplay.c  (+18 more)
(+197 files in other folders)
